--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "node ./bin/www",
+    "status": "nodemon ./bin/www"
   },
   "dependencies": {
     "cloudinary": "^2.5.1",
